tests/NormalTests/paczka1/fuzzy1/83017710.err
Error in line 7: S327 S327 13,9
Error in line 6: 5MeQ2eaZt S776 35,4
Error in line 9: S327 S776 31,1
Error in line 11: 5MeQ2eaZt S327 85,9
Error in line 13: S327 S293 3,3
Error in line 15: 5MeQ2eaZt S293 25,1
Error in line 16: AJw S293 243,1
Error in line 33: 5MeQ2eaZt S327 94,9
Error in line 23: jsfSKqV S293 51,2
Error in line 39: jsfSKqV S990 44,9
